Fix html structure errors

--- a/REPO/html/sheet01/ex01/index.html
+++ b/REPO/html/sheet01/ex01/index.html
@@ -1,21 +1,23 @@
-<DOCTYPE html>
-	<html>
+<!DOCTYPE html>
+	<html lang="en">
 	<head>
-	</meta charset="utf-8">
+	<meta charset="utf-8">
 	<meta name="description" content="Ejercicio HTML - Corr
 	ige los errores">
-	<body>
+	<title>Corrige los errores que encuenres en el documento
+	</title>
 	</head>
-	<title>Corrige los errores que encuenres en el document
-	o</title>
+	
+	<body>
 	<h1>Aprender HTML es muy divertido</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing eli
 	t. Molestiae quam optio nesciunt atque iure animi dicta ve
-	lit
+	lit</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing eli
+	t. Molestiae quam optio nesciunt atque iure animi dicta ve
+	lit</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing eli
 	t. Molestiae quam optio nesciunt atque iure animi dicta ve
 	lit</p>
 	</body>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing eli
-	t. Molestiae quam optio nesciunt atque iure animi dicta ve
-	lit</p><html>
+	</html>
