--- a/html/sheet01/ex03/index.html
+++ b/html/sheet01/ex03/index.html
@@ -7,47 +7,47 @@ racticar con etiquetas html de texto">
 <title>Biografía de Vinton Cerf</title>
 </head>
 <body>
-Biografía de Vincton Cerf
-Cuando solo tenía 2025 años trabajó en el motor de cohete F
+<h>Biografía de Vincton Cerf</h>
+Cuando solo tenía <s>20</s><u>25</u> años trabajó en el motor de cohete F
 -1 que sirvió para propulsar el cohete Saturno V que viajó
 a la luna, y a principios de los años 70 comenzó a desarrol
-lar con Robert Kahn un conjunto de protocolos de comunicaci
+lar con <b>Robert Kahn</b> un conjunto de <b>protocolos de comunicación</b>
 
 Sheet 01 5
 
 ones para la red militar, financiado por la agencia guberna
-mental DARPA.
-El objetivo era crear una red de redes que permitiera inter
-conectar las distintas redes del Departamento de Defensa de
-los Estados Unidos, todas ellas de diferentes tipos y que f
-uncionaban con diversos sistemas operativos, con independen
-cia del tipo de conexión: radioenlaces, satélites y líneas
-telefónicas.
-Las investigaciones, lideradas por Vinton Cerf, primero des
-de la Universidad de California (1967-1972) y posteriorment
-e desde la Universidad de Stanford (1972-1976), llevaron al
-diseño del conjunto de protocolos que hoy son conocidos com
-o TCP/IP(Transmission Control Protocol/Internet Protocol),
-que fue presentado por Vinton Cerf y Robert Kahn en 1972.
-Entre 1976 y 1982, trabajando en DARPA, fue pionero en el d
-esarrollo de la transmisión por radio y satélite de paquete
-s, responsable del proyecto Internet y del programa de inve
-stigación de seguridad en la red. Siempre preocupado por lo
-s problemas de conexión de redes, Cerf estableció en 1979 l
-a Internet Configuration Control Board (que posteriormente
-se denominó Internet Activities Board), y fue su primer pre
-sidente.
-Entre 1982 y 1986, Cerf diseñó el MCI MAIL, primer servicio
+mental <u><b>DARPA</b></u>.
+<blockquote>El objetivo era crear una red de redes que permitiera inter
+	conectar las distintas redes del Departamento de Defensa de
+	los Estados Unidos, todas ellas de diferentes tipos y que f
+	uncionaban con diversos sistemas operativos, con independen
+	cia del tipo de conexión: <u>radioenlaces</u>, <u>satélites</u> y <u>líneas
+		telefónicas</u>.
+</blockquote>
+<p>Las investigaciones, lideradas por Vinton Cerf, primero des
+	de la Universidad de California <i>(1967-1972) </i>y posteriorment
+	e desde la Universidad de Stanford<i>(1972-1976)</i>, llevaron al
+	diseño del conjunto de protocolos que hoy son conocidos com
+	o <b>TCP/IP</b>(Transmission Control Protocol/Internet Protocol),
+	que fue presentado por Vinton Cerf y Robert Kahn en 1972.</p>
+<p><cite>Entre 1976 y 1982, trabajando en DARPA, <u><b>fue pionero en el d
+	esarrollo de la transmisión por radio y satélite de paquete
+	s, responsable del proyecto Internet y del programa de inve
+	stigación de seguridad en la red</b></u>. Siempre preocupado por lo
+	s problemas de conexión de redes, Cerf estableció en 1979 l
+	a Internet Configuration Control Board (que posteriormente
+	se denominó Internet Activities Board), y fue su primer pre
+	sidente.</cite></p>
+<p>Entre 1982 y 1986, Cerf diseñó el MCI MAIL, primer servicio
 comercial de correo electrónico que se conectaría a Interne
-t.
-En 1992 fue uno de los fundadores de la Internet Society y
-su primer presidente.
-Actualmente Vinton Cerf es el vicepresidente mundial y Chie
-f Internet Evangelist de Google.
-Es miembro del Consejo Asesor Internacional del Centro Cult
-ural Internacional Oscar Niemeyer de Avilés, Asturias.
-
-Sheet 01 6
-
-Fuente: Wikipedia
+t.</p>
+<p>En 1992 fue uno de los fundadores de la <q><b>Internet Society</b></q> y
+su primer presidente.</p>
+<p>Actualmente Vinton Cerf es el vicepresidente mundial y Chie
+	f Internet Evangelist de Google.</p>
+<p><code>El miembro del Consejo Asesor Internacional del Centro Cult
+	ural Internacional Oscar Niemeyer de Avilés, Asturias.</code></p>
+<hr>
+<cite><em>Fuente: Wikipedia</em></cite>
+</body>
 </html>
