factory: fix with all changes

--- a/html/sheet01/ex04/index.html
+++ b/html/sheet01/ex04/index.html
@@ -3,34 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>EX:04</title>
 </head>
 <body>
-	Título principal que resume la idea general del escrito
+	<h1>Título principal</h1> que resume la idea general del escrito
 30 palabras de párrafo de bienvenida con texto lorem ipsum
-Primera idea principal a desarrollar en el escrito.
-30 palabras de párrafo que desarrolla la primera idea princ
-
-Sheet 01 7
-
-ipal y que tiene varios subtemas a desarrollar a continuaci
-ón.
-Primer subtema a desarrollar de la primera idea principal.
+<h2>idea principal</h2> a desarrollar en el escrito.
+30 palabras de párrafo que desarrolla 
+la primera idea principal y que tiene varios subtemas a
+ desarrollar a continuación.
+<h3>Primer subtema</h3> a desarrollar de la primera idea principal.
 30 palabras de párrafo que desarrolla el primer subtema de
 la primera idea principal.
-Segundo subtema a desarrollar de la primera idea principal.
+<h3>Segundo subtema </h3> a desarrollar de la primera idea principal.
 30 palabras de párrafo que desarrolla el segundo subtema de
 la primera idea principal.
-Segunda idea principal a desarrollar en el escrito.
+<h3>Segunda idea principal</h3>  a desarrollar en el escrito.
 30 palabras de párrafo que desarrolla la segunda idea princ
-ipal y que tiene varios subtemas a desarrollar a continuaci
-ón.
-Primer subtema a desarrollar de la segunda idea principal.
+ipal y que tiene varios subtemas a desarrollar a continuación.
+<h3>Primer subtema</h3> a desarrollar de la segunda idea principal.
 30 palabras de párrafo que desarrolla el primer subtema de
 la segunda idea principal.
-Segundo subtema a desarrollar de la primera idea principal.
-30 palabras de párrafo que desarrolla el segundo subtema de
-la segunda idea principal.
+<h3>Segundo subtema</h3> a desarrollar de la primera idea principal.
+30 palabras de párrafo que desarrolla el segundo subtema de la segunda idea principal.
 Conclusiones
 Párrafo de 30 palabras con la síntesis de las ideas desarro
 lladas.
