Refactory: Fix errores and fix style html ex05

--- a/html/sheet01/ex05/index.html
+++ b/html/sheet01/ex05/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	; < > & ' " backslash / copyright, nonbreaking space,
-€
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+
+	<p>jhvjhvjvjhjhggj fj gfgjhg j gjhg</p>
+    ; < > & ' " backslash / copyright, nonbreaking space, € <br />
+    <spam>&#33;</spam> <br />
+    <spam>&#60;</spam> <br />
+    <spam>&#62;</spam> <br />
+    <spam>&#38;</spam> <br />
+    <spam>&#39;</spam> <br />
+    <spam>&#34;</spam> <br />
+    <spam>&#47;</spam> <br />
+    <spam>&#174;</spam> <br />
+    <spam>&#160;</spam> <br />
+    <spam>&#8364;</spam> <br />
+  </body>
 </html>
