fix: change spam to span in html

--- a/html/sheet01/ex05/index.html
+++ b/html/sheet01/ex05/index.html
@@ -8,16 +8,16 @@
   <body>
 
 	<p>jhvjhvjvjhjhggj fj gfgjhg j gjhg</p>
-    ; < > & ' " backslash / copyright, nonbreaking space, € <br />
-    <spam>&#33;</spam> <br />
-    <spam>&#60;</spam> <br />
-    <spam>&#62;</spam> <br />
-    <spam>&#38;</spam> <br />
-    <spam>&#39;</spam> <br />
-    <spam>&#34;</spam> <br />
-    <spam>&#47;</spam> <br />
-    <spam>&#174;</spam> <br />
-    <spam>&#160;</spam> <br />
-    <spam>&#8364;</spam> <br />
+    ; < > & ' " backslash / copyright, nonbreaking space, € <br/>
+    <span>&#33;</span> <br/>
+    <span>&#60;</span> <br/>
+    <span>&#62;</span> <br/>
+    <span>&#38;</span> <br/>
+    <span>&#39;</span> <br/>
+    <span>&#34;</span> <br/>
+    <span>&#47;</span> <br/>
+    <span>&#174;</span> <br/>
+    <span>&#160;</span> <br/>
+    <span>&#8364;</span> <br/>
   </body>
 </html>
