Refactury: Add final version ex12

--- a/html/sheet01/ex12/index.html
+++ b/html/sheet01/ex12/index.html
@@ -20,6 +20,24 @@
       dolor in unde beatae labor e quibusdam, nihil assumenda eligendi sint!<br /><br />
       Maiores.
     </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisic ing elit. Dolorem at
+      nostrum iure vitae veritatis officiis officia nam aperiam consequatur,
+      dolor in unde beatae labor e quibusdam, nihil assumenda eligendi sint!<br /><br />
+      Maiores.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisic ing elit. Dolorem at
+      nostrum iure vitae veritatis officiis officia nam aperiam consequatur,
+      dolor in unde beatae labor e quibusdam, nihil assumenda eligendi sint!<br /><br />
+      Maiores.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisic ing elit. Dolorem at
+      nostrum iure vitae veritatis officiis officia nam aperiam consequatur,
+      dolor in unde beatae labor e quibusdam, nihil assumenda eligendi sint!<br /><br />
+      Maiores.
+    </p>
     <p id="ancla">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex mollitia
       quia, corporis dicta, eaque i taque.
