--- a/html/sheet01/ex13/index.html
+++ b/html/sheet01/ex13/index.html
@@ -5,5 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <img src="img/letra-f.jpg" alt="letra-f" usemap="#letter" />
+    <map name="letter">
+      <area
+        shape="rect"
+        coords="105,95 125,207"
+        href="https://es.wikipedia.org/wiki/Oeste."
+        alt="Oeste"
+      />
+      <area
+        shape="rect"
+        coords="126,95 215,117"
+        href="https://es.wikipedia.org/wiki/Norte."
+        alt="Norte"
+      />
+      <area
+        shape="rect"
+        coords="128,140 215,160"
+        href="https://es.wikipedia.org/wiki/Centro."
+        alt="Centro"
+      />
+    </map>
+  </body>
 </html>
