--- a/css/sheet01/ex01/index.html
+++ b/css/sheet01/ex01/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, init
-ial-scale=1.0">
-<title>Ejercicio 1</title>
-<style>
-/* Aquí van tus estilos CSS */
-</style>
-</head>
-<body>
-<p>Este es un párrafo.</p>
-<p>Este es otro párrafo.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, init
+ial-scale=1.0"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Ejercicio 1</title>
+    <style>
+      p {
+        color: red;
+      }
+    </style>
+  </head>
+  <body>
+    <p>Este es un párrafo.</p>
+    <p>Este es otro párrafo.</p>
+  </body>
 </html>
