Style: css/sheet01/Ex03

--- a/css/sheet01/ex03/index.html
+++ b/css/sheet01/ex03/index.html
@@ -9,7 +9,10 @@ ial-scale=1.0"
     />
     <title>Ejercicio 3</title>
     <style>
-      /* Aquí van tus estilos CSS */
+      #main-title {
+        color: red;
+        font-size: 24px;
+      }
     </style>
   </head>
   <body>
