Feature: styling ears orijitas and mofletes of the pokemon

--- a/css/sheet04/ex01/index.html
+++ b/css/sheet04/ex01/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="triangulo_top_left"></div>
+    <div class="triangulo_top_right"></div>
     <div class="container">
       <input
         type="text"
@@ -78,5 +80,7 @@
         </div>
       </div>
     </div>
+    <div class="left"></div>
+    <div class="right"></div>
   </body>
 </html>
